--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ button {
   justify-content: space-between;
   align-items: center;
   padding: 1em;
-  position: fixed;
+  /* position: fixed; */
   top: 0;
   width: 100%;
 }
